# TinyML_Internship

./: .gitignore  2026-06-15.md  2026-06-16.md  2026-06-22.md  2026-06-24.md  2026-06-26.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-10.md  2026-07-16.md  2026-07-18.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  ASSETS.md  Arduino notes 🤖.md  Chess  notes ♟.md  Goal.md  NOTES.md  PROJECT.md  Project Report.md  README.md  TODOs.md  ai-feed.md  export_pipeline.md  piece_count_distribution.xlsx  pyproject.toml  requirements.txt  ~$piece_count_distribution.xlsx
NOTES/: Commands.md  Datasets.md  FIDE & Google Efficient Chess AI Challenge.md  Ideas 💡.md  Lc0 preprocessing pipeline.md  Links.md  Local models.md  Models.md  NNUE.md  Performance.md  SARDINE Engine Blueprint.md  SARDINE commands.md  SARDINE design options.md  SARDINE 🐟.md  SARDINE.md  Thesis Ideas.md  Thesis.md  _notes.md  arduino.md  chess transformer.md  chess.md  hardware.md  notes.md  software.md
examples/: example_game.py
excel/: piece_count_distribution_10k.xlsx
plots/: hce_d1_gate_acpl.json  hce_d2_gate_acpl.json  lc0_d1_gate_acpl.json  nnue_d1_gate_acpl.json  sunfish_d1_gate_acpl.json
presentations/: SARDINE_ICTP_2026-07.pptx
scripts/: bench_teacher_move.py  bench_teacher_nets.py  benchmark_rate.py  bin_to_c_header.py  build_sardine_presentation.py  count_model_params.py  download_chessbench.py  download_data.py  download_hf_teacher.py  download_lc0.py  download_teacher.py  eval_bot_acpl.py  (+34 more)
(+99 files in other folders)
